--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Stylesheet -->
+    <link rel="icon" href="image/favicon.png" />
     <link href="css/vendor/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/vendor/fontawesome.css">
     <link rel="stylesheet" href="css/vendor/brands.css">
@@ -61,7 +62,7 @@
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
                         <div class="logo-container">
-                            <img src="" alt="ghc-logo" class="img-fluid">
+                            <img src="image/logo-no-background.png" alt="ghc-logo" class="img-fluid">
                         </div>
                     </a>
                     <button class="navbar-toggler accent-color border-0" type="button" data-bs-toggle="collapse"
@@ -268,8 +269,7 @@
                                         </p>
                                     <div class="d-flex justify-content-center">
                                         <a type="button" href="single_service.html"
-                                            class="btn post-button font-2 d-flex flex-row align-items-center gap-2">Read
-                                            More <i class="fa-solid fa-circle-arrow-right mt-1"></i></a>
+                                            class="btn post-button font-2 d-flex flex-row align-items-center gap-2">Get This Service <i class="fa-solid fa-circle-arrow-right mt-1"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -282,8 +282,7 @@
                                     <p class="text-gray">Discover compassionate and tailored aged care solutions at Grace Home Care.</p>
                                     <div class="d-flex justify-content-center">
                                         <a type="button" href="single_service.html"
-                                            class="btn post-button font-2 d-flex flex-row align-items-center gap-2">Read
-                                            More <i class="fa-solid fa-circle-arrow-right mt-1"></i></a>
+                                            class="btn post-button font-2 d-flex flex-row align-items-center gap-2">Get This Service <i class="fa-solid fa-circle-arrow-right mt-1"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -297,8 +296,7 @@
                                         staffing needs and elevate the standard of care in your healthcare organization.</p>
                                     <div class="d-flex justify-content-center">
                                         <a type="button" href="single_service.html"
-                                            class="btn post-button font-2 d-flex flex-row align-items-center gap-2">Read
-                                            More <i class="fa-solid fa-circle-arrow-right mt-1"></i></a>
+                                            class="btn post-button font-2 d-flex flex-row align-items-center gap-2">Get This Service<i class="fa-solid fa-circle-arrow-right mt-1"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -470,7 +468,7 @@
                                                             class="img-fluid rounded-circle" width="70" height="70">
                                                         <div class="d-flex flex-column h-100 justify-content-center">
                                                             <span class="text-black">David Helbert</span>
-                                                            <span class="text-gray">Civil Servant</span>
+                                                            <span class="text-gray">Patient Son</span>
                                                         </div>
                                                     </div>
                                                     <div class="accent-color" style="font-size: 3rem;">
@@ -500,7 +498,7 @@
                                                             class="img-fluid rounded-circle" width="70" height="70">
                                                         <div class="d-flex flex-column h-100 justify-content-center">
                                                             <span class="text-black">Grace Abaku</span>
-                                                            <span class="text-gray">HR Specialist</span>
+                                                            <span class="text-gray">Patient</span>
                                                         </div>
                                                     </div>
                                                     <div class="accent-color" style="font-size: 3rem;">
@@ -530,7 +528,7 @@
                                                             class="img-fluid rounded-circle" width="70" height="70">
                                                         <div class="d-flex flex-column h-100 justify-content-center">
                                                             <span class="text-black">Davies</span>
-                                                            <span class="text-gray">Social Ad Manager</span>
+                                                            <span class="text-gray">Patient</span>
                                                         </div>
                                                     </div>
                                                     <div class="accent-color" style="font-size: 3rem;">
@@ -678,71 +676,6 @@
                 </div>
             </div>
         </section>
-
-        <!-- News & Article 
-        <section class="section">
-            <div class="r-container">
-                <div class="d-flex flex-column gap-3">
-                    <div class="d-flex flex-lg-row flex-column text-lg-start text-center gap-lg-4 gap-2">
-                        <div class="col col-lg-3">
-                            <h6 class="font-2 accent-color">News & Article</h6>
-                            <h3 class="font-1 lh-1 fw-bold fs-1 mb-3">Our Latest News</h3>
-                        </div>
-                        <div class="col col-lg-7">
-                            <p class="text-gray">Fusce non egestas felis, in rhoncus est. Morbi non congue orci. Sed
-                                venenatis varius
-                                convallis. Aenean vitae hendrerit est, eu molestie orci. Vivamus consectetur molestie
-                                lacus, at mattis augue porta et.</p>
-                        </div>
-                        <div class="col col-lg-2">
-                            <a href="news.html" type="button" class="btn bg-accent-color p-3">View More</a>
-                        </div>
-                    </div>
-                    <div class="row row-cols-1 row-cols-lg-3">
-                        <div class="col mb-3">
-                            <div class="card border border-light-subtle">
-                                <img src="image/image-600x400-5.jpg" class="card-img-top" alt="...">
-                                <div class="card-body px-3 py-4">
-                                    <h6 class="font-1 lh-1 fw-bold">Cherishing Life, Bringing Independence A Little
-                                        Closer To Home</h6>
-                                    <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                        Integer tincidunt maximus malesuada. Quisque ut ipsum…</p>
-                                    <a type="button" href="single_post.html" class="btn bg-accent-color py-3 px-4 text-white">Learn
-                                        More</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col mb-3">
-                            <div class="card border border-light-subtle">
-                                <img src="image/image-600x400-4.jpg" class="card-img-top" alt="...">
-                                <div class="card-body px-3 py-4">
-                                    <h6 class="font-1 lh-1 fw-bold">Connected Living Strives To Curb Loneliness Amongst
-                                        Seniors</h6>
-                                    <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                        Integer tincidunt maximus malesuada. Quisque ut ipsum…</p>
-                                    <a type="button" href="single_post.html" class="btn bg-accent-color py-3 px-4 text-white">Learn
-                                        More</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col mb-3">
-                            <div class="card border border-light-subtle">
-                                <img src="image/image-600x400-1.jpg" class="card-img-top" alt="...">
-                                <div class="card-body px-3 py-4">
-                                    <h6 class="font-1 lh-1 fw-bold">Metabolism Changes With Age, Just Not When You Might
-                                        Think</h6>
-                                    <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                        Integer tincidunt maximus malesuada. Quisque ut ipsum…</p>
-                                    <a type="button" href="single_post.html" class="btn bg-accent-color py-3 px-4 text-white">Learn
-                                        More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>-->
-
     </main>
 
     <footer>
@@ -764,13 +697,13 @@
                 </div>
             </div>
         </section>
-        <section class="px-lg-0 px-4 py-lg-5 py-4 bg-accent-color-1">
+        <section class="px-lg-0 px-4 py-lg-5 py-4 " style="background-color: black;">
             <div class="r-container text-white">
                 <div class="row row-cols-1 row-cols-lg-4">
                     <div class="col col-lg-4 mb-3">
                         <div class="d-flex flex-column h-100 justify-content-center">
                             <div class="logo-container">
-                                <img src="image" alt="Your-Logo" class="img-fluid">
+                                <img src="image/logo-no-background.png" alt="Your-Logo" class="img-fluid">
                             </div>
                             <p>
                                 At Grace Home Care, We are ready to serve you excellently.
