--- a/about_us.html
+++ b/about_us.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Stylesheet -->
+  <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="icon" href="image/favicon.png" />
     <link href="css/vendor/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/vendor/fontawesome.css">
@@ -63,7 +67,7 @@
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
                         <div class="logo-container">
-                            <img src="image/logo-no-background.png" alt="ghc-logo" class="img-fluid">
+                            <img src="image/logo-no-background.png" alt="ghc-logo"class="img-fluid animate__animated animate__bounceInDown">
                         </div>
                     </a>
                     <button class="navbar-toggler accent-color border-0" type="button" data-bs-toggle="collapse"
@@ -121,7 +125,7 @@
                     <div class="col mb-3 pe-lg-3 position-relative">
                         <div class="overlay right"></div>
                         <div class="position-relative pe-5">
-                            <img src="image/image-600x700-1.jpg" alt="" class="img-fluid" style="z-index: -2;">
+                            <img src="image/image-600x700-1.jpg" alt=""class="img-fluid animate__animated animate__bounceInDown" style="z-index: -2;">
                             <div class="position-absolute bottom-0 start-0 ms-4 mb-4">
                             </div>
                         </div>
@@ -281,7 +285,7 @@
                                                 <div class="d-flex justify-content-between">
                                                     <div class="d-flex flex-row gap-3">
                                                         <img src="image/profile.jpg" alt="profile"
-                                                            class="img-fluid rounded-circle" width="70" height="70">
+                                                           class="img-fluid animate__animated animate__bounceInDown rounded-circle" width="70" height="70">
                                                         <div class="d-flex flex-column h-100 justify-content-center">
                                                             <span class="text-black">David Helbert</span>
                                                             <span class="text-gray">Patient Son</span>
@@ -311,7 +315,7 @@
                                                 <div class="d-flex justify-content-between">
                                                     <div class="d-flex flex-row gap-3">
                                                         <img src="image/profile.jpg" alt=""
-                                                            class="img-fluid rounded-circle" width="70" height="70">
+                                                           class="img-fluid animate__animated animate__bounceInDown rounded-circle" width="70" height="70">
                                                         <div class="d-flex flex-column h-100 justify-content-center">
                                                             <span class="text-black">Grace Abaku</span>
                                                             <span class="text-gray">Patient</span>
@@ -341,7 +345,7 @@
                                                 <div class="d-flex justify-content-between">
                                                     <div class="d-flex flex-row gap-3">
                                                         <img src="image/profile.jpg" alt=""
-                                                            class="img-fluid rounded-circle" width="70" height="70">
+                                                           class="img-fluid animate__animated animate__bounceInDown rounded-circle" width="70" height="70">
                                                         <div class="d-flex flex-column h-100 justify-content-center">
                                                             <span class="text-black">Davies</span>
                                                             <span class="text-gray">Patient</span>
@@ -413,7 +417,7 @@
                     <div class="col mb-5 pe-lg-3 position-relative">
                         <div class="overlay left"></div>
                         <div class="position-relative ps-5">
-                            <img src="image/5053198.jpg" alt="" class="img-fluid rounded-3"
+                            <img src="image/5053198.jpg" alt=""class="img-fluid animate__animated animate__bounceInDown rounded-3"
                                 style="z-index: -2;">
                             <div class="position-absolute bottom-0 end-0 d-flex justify-content-end">
                                 <div class=" bg-accent-color rounded-3 p-4 w-75" style="margin-bottom: -3rem;">
@@ -453,7 +457,7 @@
                     <div class="col col-lg-4 mb-3">
                         <div class="d-flex flex-column h-100 justify-content-center">
                             <div class="logo-container">
-                                <img src="image/logo-no-background.png" alt="Your-Logo" class="img-fluid">
+                                <img src="image/logo-no-background.png" alt="Your-Logo"class="img-fluid animate__animated animate__bounceInDown">
                             </div>
                             <p>
                                 At Grace Home Care, We are ready to serve you excellently.
