--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Stylesheet -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="icon" href="image/favicon.png" />
     <link href="css/vendor/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/vendor/fontawesome.css" />
@@ -68,7 +72,7 @@
                 <img
                   src="image/logo-no-background.png"
                   alt="ghc-logo"
-                  class="img-fluid"
+                  class="img-fluid animate__animated animate__bounceInDown animate__animated animate__bounceInDown"
                 />
               </div>
             </a>
@@ -143,10 +147,14 @@
             class="d-flex flex-column justify-content-center gap-3 h-100 position-relative"
             style="max-width: 768px; z-index: 2"
           >
-            <h1 class="text-title text-white fw-bold font-1 lh-1">
+            <h1
+              class="text-title text-white fw-bold font-1 lh-1 animate__animated animate__bounceInDown"
+            >
               Grace Nursing <br />Service
             </h1>
-            <p class="text-white f-18 text-font">
+            <p
+              class="text-white f-18 text-font animate__animated animate__fadeInTopRight"
+            >
               At Grace Home Care, we are ready to serve you excellently.<br />
               Diagnosis and prescription is done by the doctor, nurses render
               care to you.
@@ -155,7 +163,7 @@
               <a
                 type="button"
                 href="about_us.html"
-                class="btn bg-accent-color text-font rounded-0"
+                class="btn bg-accent-color text-font rounded-0 animate__animated animate__fadeInBottomLeft"
                 >LEARN MORE</a
               >
             </div>
@@ -221,7 +229,7 @@
                 <img
                   src="image/image-600x700-1.jpg"
                   alt=""
-                  class="img-fluid"
+                  class="img-fluid animate__animated animate__bounceInDown"
                   style="z-index: -2"
                 />
                 <div class="position-absolute bottom-0 start-0 ms-4 mb-4"></div>
@@ -506,7 +514,7 @@
                 <img
                   src="image/5053198.jpg"
                   alt=""
-                  class="img-fluid rounded-3"
+                  class="img-fluid animate__animated animate__bounceInDown rounded-3"
                   style="z-index: -2"
                 />
                 <div
@@ -646,7 +654,7 @@
                               <img
                                 src="image/profile.jpg"
                                 alt="profile"
-                                class="img-fluid rounded-circle"
+                                class="img-fluid animate__animated animate__bounceInDown rounded-circle"
                                 width="70"
                                 height="70"
                               />
@@ -687,7 +695,7 @@
                               <img
                                 src="image/profile.jpg"
                                 alt=""
-                                class="img-fluid rounded-circle"
+                                class="img-fluid animate__animated animate__bounceInDown rounded-circle"
                                 width="70"
                                 height="70"
                               />
@@ -728,7 +736,7 @@
                               <img
                                 src="image/profile.jpg"
                                 alt=""
-                                class="img-fluid rounded-circle"
+                                class="img-fluid animate__animated animate__bounceInDown rounded-circle"
                                 width="70"
                                 height="70"
                               />
@@ -973,7 +981,7 @@
                   <img
                     src="image/logo-no-background.png"
                     alt="Your-Logo"
-                    class="img-fluid"
+                    class="img-fluid animate__animated animate__bounceInDown"
                   />
                 </div>
                 <p>
