--- a/service.html
+++ b/service.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Stylesheet -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="icon" href="image/favicon.png" />
     <link href="css/vendor/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/vendor/fontawesome.css" />
@@ -68,7 +72,7 @@
                 <img
                   src="image/logo-no-background.png"
                   alt="ghc-logo"
-                  class="img-fluid"
+                  class="img-fluid animate__animated animate__bounceInDown"
                 />
               </div>
             </a>
@@ -526,7 +530,7 @@
                 <img
                   src="image/image-600x700-3.jpg"
                   alt=""
-                  class="img-fluid rounded-3"
+                  class="img-fluid animate__animated animate__bounceInDown rounded-3"
                   style="z-index: -2"
                 />
                 <div
@@ -658,7 +662,7 @@
                   <img
                     src="image/logo-no-background.png"
                     alt="Your-Logo"
-                    class="img-fluid"
+                    class="img-fluid animate__animated animate__bounceInDown"
                   />
                 </div>
                 <p>
