--- a/service.html
+++ b/service.html
@@ -239,6 +239,30 @@
                   class="card p-3 with-border-bottom border-0 shadow rounded-3"
                 >
                   <img
+                    src="image/5053198.jpg"
+                    class="card-img-top rounded-3"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 class="font-1 fw-bold">Home Dialysis</h5>
+                    <p class="text-gray">Ensuring maximum total nursing care is rendered to our client's at the comfort of their homes or preferred location✈.</p>
+                    <div class="d-flex justify-content-center">
+                      <a
+                        type="button"
+                        href="tel:08052366649"
+                        class="btn post-button font-2 d-flex flex-row align-items-center gap-2"
+                        >Get This Service
+                        <i class="fa-solid fa-circle-arrow-right mt-1"></i
+                      ></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col mb-3">
+                <div
+                  class="card p-3 with-border-bottom border-0 shadow rounded-3"
+                >
+                  <img
                     src="image/image-600x400-1.jpg"
                     class="card-img-top rounded-3"
                     alt="..."
@@ -719,7 +743,7 @@
                 <div class="d-flex flex-wrap">
                   <div class="d-flex flex-row me-2 gap-2 align-items-center">
                     <i class="fa-solid fa-location-dot"></i>
-                    Abuja, Nigeria
+                    32 Femi sule street dideolu Estate Victoria island
                   </div>
                   <div class="d-flex flex-row me-2 gap-2 align-items-center">
                     <i class="fa-solid fa-phone"></i>
