--- a/contact.html
+++ b/contact.html
@@ -200,7 +200,7 @@
                       <h6 class="font-1 fw-bold lh-1 m-0 text-gray">
                         Visit Us
                       </h6>
-                      <span class="fs-4 fw-bold font-1">Abuja, Nigeria</span>
+                      <span class="fs-4 fw-bold font-1">32 Femi sule street dideolu Estate Victoria island</span>
                     </div>
                   </div>
                   <div class="d-flex flex-row gap-3 align-items-center">
@@ -363,8 +363,8 @@
               loading="lazy"
               class="maps overflow-hidden rounded-3"
               src="https://maps.google.com/maps?q=Abuja%20&amp;t=m&amp;z=14&amp;output=embed&amp;iwloc=near"
-              title="Abuja, Nigeria"
-              aria-label="Abuja, Nigeria"
+              title="32 Femi sule street dideolu Estate Victoria island"
+              aria-label="32 Femi sule street dideolu Estate Victoria island"
             ></iframe>
           </div>
         </div>
@@ -472,7 +472,7 @@
                 <div class="d-flex flex-wrap">
                   <div class="d-flex flex-row me-2 gap-2 align-items-center">
                     <i class="fa-solid fa-location-dot"></i>
-                    Abuja, Nigeria
+                    32 Femi sule street dideolu Estate Victoria island
                   </div>
                   <div class="d-flex flex-row me-2 gap-2 align-items-center">
                     <i class="fa-solid fa-phone"></i>
