--- a/about_us.html
+++ b/about_us.html
@@ -489,7 +489,7 @@
                             <div class="d-flex flex-wrap">
                                 <div class="d-flex flex-row me-2 gap-2 align-items-center">
                                     <i class="fa-solid fa-location-dot"></i>
-                                    Abuja, Nigeria
+                                    32 Femi sule street dideolu Estate Victoria island
                                 </div>
                                 <div class="d-flex flex-row me-2 gap-2 align-items-center">
                                     <i class="fa-solid fa-phone"></i>
